Change to use Client.target(String) to avoid JAX-RS 1 vs 2 conflict