@@ -5,13 +5,18 @@
  */
 package org.javaee7.jaxrs.singleton;
 
+import static org.junit.Assert.assertEquals;
+
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.StringTokenizer;
+
 import javax.ws.rs.client.Client;
 import javax.ws.rs.client.ClientBuilder;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.client.WebTarget;
+
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.junit.Arquillian;
 import org.jboss.arquillian.test.api.ArquillianResource;
@@ -19,9 +24,8 @@ import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.After;
 import org.junit.Before;
-import org.junit.Test;
-import static org.junit.Assert.*;
 import org.junit.FixMethodOrder;
+import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.MethodSorters;
 
@@ -41,7 +45,7 @@ public class ApplicationSingletonResourceTest {
     @Before
     public void setUp() throws MalformedURLException {
         client = ClientBuilder.newClient();
-        target = client.target(new URL(base, "webresources/application").toExternalForm());
+        target = client.target(URI.create(new URL(base, "webresources/application").toExternalForm()));
     }
 
     @After
